k8s/consumer.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: consumer-app
  name: consumer-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer-app
  template:
    metadata:
      labels:
        app: consumer-app
    spec:
      containers:
      - image: us-west2-docker.pkg.dev/fastapi-kafka/consumer-app/consumer-app:1.1.0
        imagePullPolicy: Never
        name: consumer-app
