k8s/kafka-monitor.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kafka-monitor
  name: kafka-monitor-service
  namespace: default
spec:
  ports:
  - port: 9000
  selector:
    app: kafka-monitor
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kafka-monitor
  name: kafdrop
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-monitor
  template:
    metadata:
      labels:
        app: kafka-monitor
    spec:
      containers:
      - env:
        - name: KAFKA_BROKERCONNECT
          value: "kafka-service:9092"
        - name: JVM_OPTS
          value: "-Xms16M -Xmx48M -Xss180K -XX:-TieredCompilation -XX:+UseStringDeduplication -noverify"
        image: obsidiandynamics/kafdrop
        imagePullPolicy: IfNotPresent
        name: kafdrop
        ports:
        - containerPort: 9000
