k8s/producer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-producer-service
spec:
  selector:
    app: producer-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    name: fastapi-port
