k8s/producer.yml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-producer-service
spec:
  selector:
    app: producer-app
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
    name: fastapi-port
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: producer-app
  name: producer-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: producer-app
  template:
    metadata:
      labels:
        app: producer-app
    spec:
      containers:
      - image: producer-app:1.2.2
        imagePullPolicy: Never
        name: producer-app
        ports:
        - containerPort: 8000
          name: fastapi
