k8s/kafka-monitor-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-monitor-ingress
spec:
  rules:
  - http:
      paths:
      - path: /kafdrop
        pathType: Prefix
        backend:
          service:
            name: kafka-monitor-service
            port:
              number: 9000
