k8s/producer-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-producer-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.allow-http: "true"
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fastapi-producer-service
            port:
              number: 8000
